--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sd-0x-block8-project-js-unit-tests",
+  "name": "project-jest-unit-tests",
   "version": "1.0.0",
-  "description": "Project for block 8",
+  "description": "Project for block 8 trybe",
   "main": "index.js",
   "scripts": {
     "test": "jest",
@@ -10,22 +10,12 @@
   "jest": {
     "rootDir": "./tests/"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/betrybe/ssd-0x-block8-project-js-unit-test.git"
-  },
   "keywords": [
     "javascript",
     "tests",
     "assert",
     "jest"
   ],
-  "author": "Jean Vasconcelos",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/betrybe/sd-0x-block8-project-js-unit-test/issues"
-  },
-  "homepage": "https://github.com/betrybe/sd-0x-block8-project-js-unit-test#readme",
   "devDependencies": {
     "eslint-config-trybe-fundamentals": "1.1.1",
     "jest": "24.9.0"
